[package]
name = "google-jwt-verify"
version = "0.3.0"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
readme = "README.md"
repository = "https://github.com/fuchsnj/google-jwt-verify"
license = "MIT/Apache-2.0"
description = """
A client to verify Google JSON web tokens
"""
edition = "2018"

[features]
default = ["async"]
async = ["async-trait"]
blocking = ["reqwest/blocking"]

[dependencies]
async-trait = {version = "0.1.42", optional = true}
openssl = "0.10.63"
base64 = "0.21.7"
serde = "1"
serde_json = "1"
serde_derive = "1.0.104"
reqwest = {version="0.11.24"}
headers = "0.3.1"
tokio = {version = "1.35.1", features = ["macros"]}
